--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -19,22 +19,25 @@
         console.log(allCookies)
         var cookies = document.cookie.split(';');
         for(var i=0 ; i < cookies.length ; ++i) {
-        var pair = cookies[i].trim().split('=');
-        if(pair[0] == name)
+          var pair = cookies[i].trim().split('=');
+          if(pair[0] == name){
             return pair[1];
           }
-           return null;
-        };
+        }
+        return null;
+      };
       if (messageContainer) {
         console.log(document.location.pathname)
         const thisCookie = getCookie('connect.sid')
         console.log(thisCookie)
+        // connect to socket
         const socket = io();
         socket.on("session", ({ sessionID, userID, username }) => {
           // attach the session ID to the next reconnection attempts
           socket.auth = { sessionID };
-          // store it in the localStorage
-console.log(username)          // save the ID of the user
+
+          console.log(username)          
+          // save the ID of the user
           socket.userID = userID;
           
 });
